# server-watcher

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts
.husky/: commit-msg  prepare-commit-msg
src/: App.tsx  dev-server-watcher.ts  main.tsx  models.ts  notifications.ts  server-watcher-api.ts  state.ts  styles.css  tauri-server-watcher.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: command.rs  lib.rs  main.rs  models.rs  process.rs  scanner.rs
tests/: notifications.test.ts  state.test.ts  tauri-server-watcher.test.ts
