[package]
name = "server-watcher"
version = "0.1.3"
description = "A Windows desktop utility for watching local development servers"
authors = ["Melty1000"]
edition = "2021"

[lib]
name = "server_watcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
